--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body bgcolor="green">
+<body bgcolor="black">
     <h1> Welcome</h1>
 </body>
 </html>
